--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 DD mmm YYYY - X.Y.Z (To be released)
 ------------------------------------
 
+ * Fix apache logging limitation by using correct apache call.
+   [Christian Folini]
  * Remove misguided call to srand()
    [Issues #778, #781 and #836 - Michael Bunk, @gilperon]
  * Fix compilation problem while ssdeep is installed in non-standard
